@@ -629,6 +629,10 @@ name|_namespace
 init|=
 literal|null
 decl_stmt|;
+specifier|private
+name|ModuleDescriptor
+name|_md
+decl_stmt|;
 specifier|public
 name|DefaultDependencyDescriptor
 parameter_list|(
@@ -814,12 +818,9 @@ name|boolean
 name|transitive
 parameter_list|)
 block|{
-name|_parentId
+name|_md
 operator|=
 name|md
-operator|.
-name|getModuleRevisionId
-argument_list|()
 expr_stmt|;
 name|_revId
 operator|=
@@ -1954,6 +1955,15 @@ name|getParentRevisionId
 parameter_list|()
 block|{
 return|return
+name|_md
+operator|!=
+literal|null
+condition|?
+name|_md
+operator|.
+name|getResolvedModuleRevisionId
+argument_list|()
+else|:
 name|_parentId
 return|;
 block|}
