@@ -1,6 +1,7 @@
 - IMPROVE: performances with complex dependency graphs
 - IMPROVE: Retrieve task now also optionally do ivy file downloads (IVY-167) (with the contribution of Costin Leau)
 
+- FIX: force attribute is not treated as it should in some cases (IVY-182)
 - FIX: problem reading 'invalid' POMs (IVY-153)
 - FIX: cryptic NPE due to spelling error in ivy.xml (IVY-177)
 - FIX: conflicts with dynamic revisions not resolved properly (IVY-181)
